--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=index.pdf">
+    <meta http-equiv="refresh" content="0; url=resume.pdf">
     <title>Redirecting to PDF</title>
 </head>
 <body>
