--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=./resume.pdf">
+    <meta http-equiv="refresh" content="0; url=resume.pdf">
     <title>Redirecting to PDF</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="./resume.pdf">click here to view the PDF.</a></p>
+    <p>If you are not redirected, <a href="resume.pdf">click here to view the PDF.</a></p>
 </body>
 </html>
